# RedCrown

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/desktop/electron/: main.mjs  preload.cjs
apps/desktop/src/: App.tsx  RedCrownPlayer.tsx  contract.generated.ts  global.d.ts  home-model.test.ts  home-model.ts  packaging-config.test.ts  playback-model.ts  player-model.test.ts  player-model.ts  settings-model.test.ts  settings-model.ts  styles.css
apps/desktop/src/app/: App.tsx
apps/desktop/src/features/catalog/: CatalogView.test.tsx  CatalogView.tsx  catalog-session.ts  catalog-utils.ts
apps/desktop/src/features/details/: DetailsView.tsx
apps/desktop/src/features/diagnostics/: DiagnosticsView.tsx  diagnostics-model.test.ts  diagnostics-model.ts
apps/desktop/src/features/home/: HomeView.tsx  home-model.test.ts  home-model.ts
apps/desktop/src/features/playback/: PlayerView.tsx  RedCrownPlayer.test.tsx  RedCrownPlayer.tsx  playback-model.test.ts  playback-model.ts  player-model.test.ts  player-model.ts
apps/desktop/src/features/settings/: PopcornMigration.tsx  SettingsView.tsx  settings-model.test.ts  settings-model.ts
apps/desktop/src/shared/: contract.generated.ts  ipc.ts
apps/desktop/src/shared/ui/: ContextActionPopover.test.tsx  ContextActionPopover.tsx  HorizontalCarousel.tsx  Icon.tsx  PosterImage.tsx  WindowControls.tsx  carousel-gesture.test.ts  carousel-gesture.ts
backend/: Cargo.toml
backend/crates/redcrown-catalog/: Cargo.toml
backend/crates/redcrown-catalog/src/: lib.rs
backend/crates/redcrown-core/: Cargo.toml
backend/crates/redcrown-core/src/: lib.rs
backend/crates/redcrown-desktop/: Cargo.toml
backend/crates/redcrown-desktop/src/: main.rs
backend/crates/redcrown-diagnostics/: Cargo.toml
backend/crates/redcrown-diagnostics/src/: lib.rs
backend/crates/redcrown-library/: Cargo.toml
backend/crates/redcrown-library/src/: lib.rs
backend/crates/redcrown-torrent/: Cargo.toml
backend/crates/redcrown-torrent/src/: cache.rs  integration_tests.rs  lib.rs  tracker_list.rs
docs/: architecture.md  desktop-shell.md  episode-playback.md  ffmpeg-distribution.md  playback-preparation.md  popcorn-migration.md  product-experience.md  provider-contract.md  release-process.md  renderer-architecture.md  security-model.md  torrent-engine-decision.md  torrent-startup.md  watched-state.md
docs/releases/: v0.2.5.md  v0.2.6.md
scripts/: dev-full.ps1  ensure-ffmpeg.ps1  package-win.ps1  tasks.ps1  test-magnet.ps1  test-media.ps1  test-torrent.ps1
