[package]
name = "redcrown-catalog"
version = "0.2.1"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
backtrace.workspace = true
redcrown-core = { path = "../redcrown-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
axum = "0.8"

[lints]
workspace = true
