[package]
name = "redcrown-core"
version = "0.2.6"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
backtrace.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true
