[package]
name = "redcrown-desktop"
version = "0.2.2"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
mimalloc.workspace = true
redcrown-catalog = { path = "../redcrown-catalog" }
redcrown-core = { path = "../redcrown-core" }
redcrown-diagnostics = { path = "../redcrown-diagnostics" }
redcrown-library = { path = "../redcrown-library" }
redcrown-torrent = { path = "../redcrown-torrent" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
