[package]
name = "redcrown-torrent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
backtrace.workspace = true
http.workspace = true
librqbit.workspace = true
redcrown-core = { path = "../redcrown-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
