[package]
name = "redcrown-torrent"
version = "0.2.6"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
backtrace.workspace = true
http.workspace = true
librqbit.workspace = true
redcrown-core = { path = "../redcrown-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true

[dev-dependencies]
redcrown-diagnostics = { path = "../redcrown-diagnostics" }
tempfile.workspace = true
